2003-02-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-shape.c (nr_arena_shape_clip): OR masks

	* src/sp-defs.c (sp_defs_update): Implement
	(sp_defs_modified): Ditto

	* src/sp-clippath.c (sp_clippath_update): Implement
	(sp_clippath_modified): Ditto
	(sp_clippath_show): Fix
	(sp_clippath_hide): Implement

	* src/sp-item.c (sp_item_set): Fix clippath
	(sp_item_show): Ditto
	(sp_item_private_hide): Ditto
	(sp_item_display_key_new): New method

	* src/sp-item.h: Use new signature for ::show and ::hide

2003-02-01  Daniel Yacob  <locales@geez.org>

	* configure.in: Added "am" (Amharic) to ALL_LINGUAS.

2003-02-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-use.c (sp_use_init): Set width and height default to 100%
	(sp_use_set): Ditto
	(sp_use_bbox): use child transform
	(sp_use_update): Calculate relative lengths, set new viewport

	* src/sp-object.c: Removed ::dispose and some commented out code

	* src/sp-symbol.c: New file

	* src/sp-symbol.h: New file

	* src/enums.h: New file

	* src/xml/repr-io.c (sp_repr_svg_read_node): Return if entity declaration

	* src/sp-root.c (sp_root_init): Set correct default viewport values
	(sp_root_build): Read 'x', 'y', 'version', 'preserveAspectRatio'
	(sp_root_set): Parse added attributes, accept percentages for x, y, width, height
	(sp_root_update): Set up proper transformations to support aspect ratios

	* src/sp-item.h: Added viewPort and item2viewPort transformation to item context

	* src/document.c (sp_document_ensure_up_to_date): Set initial viewport
	and identity transforms in item context
	(sp_document_idle_handler): Ditto

	* src/attributes.h: Added 'version' and 'preserveAspectRatio'

2003-01-31  Masatake YAMATO  <jet@gyve.org>

	* src/main.c (POPT_TABLEEND): Define if it is not defined in
	popt.h. copied from forntline.

2003-01-30  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/guideline.c (sp_guideline_render): Do not round int
